@@ -1,6 +1,7 @@
 mountall (1.2~) UNRELEASED; urgency=low
 
-  * Start all fsck instances in parallel.
+  * Start all fsck instances in parallel, but set their priorities so that
+    thrashing is avoided (LP: #491389).
 
  -- Johan Kiviniemi <debian@johan.kiviniemi.name>  Wed, 14 Oct 2009 00:58:21 +0300
 
